disable rh containers
molecule test fixes

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,10 +10,10 @@ lint:
   name: yamllint
 
 platforms:
-  - name: filebeat-rh6
-    image: centos:6
-  - name: filebeat-rh7
-    image: centos:7
+#  - name: filebeat-rh6
+#    image: centos:6
+#  - name: filebeat-rh7
+#    image: centos:7
   - name: filebeat-deb8
     image: debian:8
   - name: filebeat-deb9
@@ -26,7 +26,7 @@ provisioner:
   lint:
     name: ansible-lint
   options:
-    diff: False
+    diff: True
     become: True
   env:
     ANSIBLE_HASH_BEHAVIOUR: merge
