--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ language: python
 services:
   - docker
 
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
-
 install:
   - pip install molecule
-  - pip install docker
+  - pip install docker-py
 
 script:
+  - ansible --version
+  - molecule --version
   - molecule test
