--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -1,9 +1,10 @@
 ---
+
 - name: Create
   hosts: localhost
   connection: local
   gather_facts: false
-#  no_log: "{{ not lookup('env', 'MOLECULE_DEBUG') | bool }}"
+  no_log: "{{ not lookup('env', 'MOLECULE_DEBUG') | bool }}"
   vars:
     molecule_file: "{{ lookup('env', 'MOLECULE_FILE') }}"
     molecule_ephemeral_directory: "{{ lookup('env', 'MOLECULE_EPHEMERAL_DIRECTORY') }}"
