--- a/tasks/restart.yml
+++ b/tasks/restart.yml
@@ -4,7 +4,7 @@
   service:
     name: filebeat
     state: started
-    enabled: yes
+    enabled: true
 
 - name: restart filebeat service
   debug:
