--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -68,6 +68,8 @@
         ulimits: "{{ item.ulimits | default(omit) }}"
         networks: "{{ item.networks | default(omit) }}"
         dns_servers: "{{ item.dns_servers | default(omit) }}"
+        security_opts: "{{ item.security_opts | default(omit) }}"
+        tmpfs: "{{ item.tmpfs | default(omit) }}"
       register: server
       with_items: "{{ molecule_yml.platforms }}"
       async: 7200
